# aoc

2017/: .gitignore  1.2.py  1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.c  17.py  18.py  19.py  2.2.py  2.py  20.py  21.py  22.py  23.c  23.py  24.py  25.py  3.1.py  3.2.py  4.1.py  4.2.py  5.py  6.py  7.py  8.py  9.py  day10.py
2018/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2018/input/: 24ex
2018/templates/: 10.html
2019/: .gitignore  1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  draw.py  intvm.py
2019/templates/: 13.html  25.html
2020/: 1.py  1.rs  10.py  11.py  12.rs  13.py  14.py  15.rs  16.py  17.py  18.py  19.py  2.rs  21.py  23.py  24.rs  25.rs  3.py  3.rs  4.py  5.rs  6.py  7.py  8.rs  9.py  Cargo.toml
2020/input/: 15
2021/: 1.py  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.py  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs  Cargo.toml
2021/examples/: 18e
2022/: 1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  17.rs  19.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.py  8.rs  9.rs  Cargo.toml
2023/: .gitignore  1.py  10.py  11.pas  11.py  12.py  13.py  14.py  15  15.pas  15.py  16.py  17.py  18.py  19.py  2.py  20.rs  3.py  4.py  5.py  6.py  7.rs  8.py  9.py  Cargo.toml
2024/: 1.py  10.py  11.py  12.py  14.py  15.py  17.py  18.py  19.py  2.py  23.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
