[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Samuel Carlsson <samuel.carlsson@gmail.com>"]
edition = "2018"

[[bin]]
name = "1"
path = "1.rs"

[[bin]]
name = "2"
path = "2.rs"

[[bin]]
name = "3"
path = "3.rs"

[[bin]]
name = "5"
path = "5.rs"

[[bin]]
name = "8"
path = "8.rs"

[[bin]]
name = "12"
path = "12.rs"

[[bin]]
name = "15"
path = "15.rs"
