[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Samuel Carlsson <samuel.carlsson@gmail.com>"]
edition = "2018"

[[bin]]
name = "2"
path = "2.rs"

[[bin]]
name = "3"
path = "3.rs"

[[bin]]
name = "4"
path = "4.rs"

[[bin]]
name = "5"
path = "5.rs"

[[bin]]
name = "6"
path = "6.rs"

[[bin]]
name = "7"
path = "7.rs"
